Traduction de ses morts

--- a/lib/presentation/core/_l10n/app_cs.arb
+++ b/lib/presentation/core/_l10n/app_cs.arb
@@ -237,9 +237,9 @@
     "day" : "Novo opažanje",
     "date" : "Datum",
     "comments" : "Poznámky",
-    "path_advanded_guide" : "assets/guide_avance_pdf/guide_avance_cs.pdf",
-    "path_basic_guide" : "assets/guide_de_base_pdf/guide_de_base_cs.pdf",
-    "path_guide_pdf" : "assets/guide.pdf",
+    "path_advanded_guide": "assets/guide_avance_pdf/guide_avance_cs.pdf",
+    "path_basic_guide": "assets/guide_de_base_pdf/guide_de_base_cs.pdf",
+    "path_guide_pdf": "assets/guide_complet/guide_cs.pdf",
     "sky" : "Nebe",
     "pink" : "Korál",
     "medication" : "léky",
