--- a/lib/presentation/core/_l10n/app_de.arb
+++ b/lib/presentation/core/_l10n/app_de.arb
@@ -237,9 +237,9 @@
     "day" : "Tag",
     "date" : "Datum",
     "comments" : "Anmerkungen",
-    "path_advanded_guide" : "assets/guide_avance_pdf/guide_avance_de.pdf",
-    "path_basic_guide" : "assets/guide_de_base_pdf/guide_de_base_de.pdf",
-    "path_guide_pdf" : "assets/guide.pdf",
+    "path_advanded_guide": "assets/guide_avance_pdf/guide_avance_de.pdf",
+    "path_basic_guide": "assets/guide_de_base_pdf/guide_de_base_de.pdf",
+    "path_guide_pdf": "assets/guide_complet/guide_de.pdf",
     "sky" : "Himmel",
     "pink" : "Koralle",
     "medication" : "Medikament",
