--- a/lib/presentation/core/_l10n/app_es.arb
+++ b/lib/presentation/core/_l10n/app_es.arb
@@ -237,9 +237,9 @@
     "day" : "Dia",
     "date" : "Fecha",
     "comments" : "Notas",
-    "path_advanded_guide" : "assets/guide_avance_pdf/guide_avance_es.pdf",
-    "path_basic_guide" : "assets/guide_de_base_pdf/guide_de_base_es.pdf",
-    "path_guide_pdf" : "assets/guide.pdf",
+    "path_advanded_guide": "assets/guide_avance_pdf/guide_avance_es.pdf",
+    "path_basic_guide": "assets/guide_de_base_pdf/guide_de_base_es.pdf",
+    "path_guide_pdf": "assets/guide_complet/guide_es.pdf",
     "sky" : "Cielo",
     "pink" : "Coral",
     "medication" : "Medicamento",
