--- a/lib/presentation/core/_l10n/app_fr.arb
+++ b/lib/presentation/core/_l10n/app_fr.arb
@@ -237,8 +237,8 @@
     "day":"Jour",
     "date":"Date",
     "comments":"Commentaires",
-    "path_advanded_guide": "assets/html/guide_avance_fr.html",
-    "path_basic_guide": "assets/html/guide_de_base_fr.html",
+    "path_advanded_guide": "assets/guide_avance_pdf/guide_avance_fr.pdf",
+    "path_basic_guide": "assets/guide_de_base_pdf/guide_de_base_fr.pdf",
     "path_guide_pdf": "assets/guide_complet/guide_fr.pdf",
     "sky": "Ciel",
     "pink": "Corail",
