--- a/lib/presentation/core/_l10n/app_it.arb
+++ b/lib/presentation/core/_l10n/app_it.arb
@@ -237,9 +237,9 @@
     "day" : "Giorno",
     "date" : "Data",
     "comments" : "Annotazioni",
-    "path_advanded_guide" : "assets/guide_avance_pdf/guide_avance_it.pdf",
-    "path_basic_guide" : "assets/guide_de_base_pdf/guide_de_base_it.pdf",
-    "path_guide_pdf" : "assets/guide.pdf",
+    "path_advanded_guide": "assets/guide_avance_pdf/guide_avance_it.pdf",
+    "path_basic_guide": "assets/guide_de_base_pdf/guide_de_base_it.pdf",
+    "path_guide_pdf": "assets/guide_complet/guide_it.pdf",
     "sky" : "Cielo",
     "pink" : "Corallo",
     "medication" : "farmaco",
