--- a/lib/presentation/core/_l10n/app_en.arb
+++ b/lib/presentation/core/_l10n/app_en.arb
@@ -237,8 +237,8 @@
     "day": "Day",
     "date": "Date",
     "comments": "Comments",
-    "path_advanded_guide": "assets/html/guide_avance_en.html",
-    "path_basic_guide": "assets/html/guide_de_base_en.html",
+    "path_advanded_guide": "assets/guide_avance_pdf/guide_avance_en.pdf",
+    "path_basic_guide": "assets/guide_de_base_pdf/guide_de_base_en.pdf",
     "path_guide_pdf": "assets/guide_complet/guide_en.pdf",
     "sky": "Sky",
     "pink": "Pink",
