--- a/lib/presentation/core/_l10n/app_de.arb
+++ b/lib/presentation/core/_l10n/app_de.arb
@@ -302,6 +302,7 @@
     "d_day" : "T",
     "premier_regle" : "DE",
     "vers" : "auf",
+    "cycles" : "Zyklen",
     "@resend_cycle_3_to_2": {
         "type": "text",
         "placeholders": {
