--- a/lib/presentation/core/_l10n/app_hr.arb
+++ b/lib/presentation/core/_l10n/app_hr.arb
@@ -302,6 +302,7 @@
     "d_day" : "D",
     "premier_regle" : "PM",
     "vers" : "u",
+    "cycles" : "Ciklusi",
     "@resend_cycle_3_to_2": {
         "type": "text",
         "placeholders": {
