--- a/lib/presentation/core/_l10n/app_cs.arb
+++ b/lib/presentation/core/_l10n/app_cs.arb
@@ -128,7 +128,7 @@
     "sadness_discouragement_hypersensitivity" : "Smutek Znechucení Přecitlivělost",
     "other" : "Jiné",
     "other_mood" : "Jiná nálada",
-    "associated_sign" : "DOPROVÁZEJICÍ ZNAKY",
+    "associated_sign" : "Doprovázejicí znaky",
     "bt" : "TP",
     "breast_tension" : "Tlak prsou",
     "bp" : "BB",
@@ -184,7 +184,7 @@
     "mark_1" : "Označit 1",
     "mark_2" : "Označit 2",
     "mark_3" : "Označit 3",
-    "delete" : "Vymazat ?",
+    "deletePI" : "Vymazat '?'",
     "modify_daily_observation" : "Změnit pozorování dne",
     "cancel_peak_day" : "Zřušit vrchol",
     "cancel_colour" : "Zřušit barvu",
@@ -195,7 +195,7 @@
     "do_you_really_want_to_delete_this_observation" : "Chcete opravdu odstranit tuto poznámku?",
     "cancel" : "Zrušit",
     "observation_of_date" : "Pozorování dne",
-    "other_observation" : "Jiný pocit",
+    "other_observation" : "Jiné pozorování",
     "other_mucus" : "Jiné hlen",
     "other_event" : "Jiná poznámka",
     "other_mood" : "Jiná nálada",
@@ -207,7 +207,7 @@
     "observation" : "pozorování ",
     "change_colour" : "Změnit barvu",
     "mark_infertile" : "Označit: neplodné",
-    "delete_point_interrogation" : "Smazat ?",
+    "delete_point_interrogation" : "Smazat '?'",
     "cancel_colour" : "Zrušit barvu",
     "cancel_infertile" : "Zrušit neplodné",
     "cancel_all_analysis" : "Zrušit celou analýzu",
@@ -267,8 +267,8 @@
     "would_you_like_to_add_a_comment_for_the" : "Chcete přidat pozorování k",
     "add" : "Přidat",
     "all_your_recordings_will_be_permanently_deleted" : "Všechny Vaše záznamy budou trvale smazány",
-    "notification" : "Smazat vše",
-    "erase_all" : "Oznámení",
+    "notification" : "Oznámení",
+    "erase_all" : "Smazat vše",
     "activate_notifications_to_receive_alerts_and_reminders" : "Aktivace oznámení pro příjem upozornění a připomínek",
     "notifications_are_scheduled" : "Oznámení jsou naplánována",
     "notification_scheduled" : "Oznámení naplánována",
@@ -300,7 +300,7 @@
     "icon_dry" : "assets/icon_observation/sensation/sensation_S.png",
     "this_date_already_exist_in_previous_cycle" : "Toto datum již existuje v předchozím cyklu. Chcete pokračovat?",
     "d_day" : "D",
-    "premier_regle" : "PC",
+    "premier_regle" : "1.M",
     "vers" : "na",
     "cycles" : "Cykly",
     "@resend_cycle_3_to_2": {
