--- a/lib/presentation/core/_l10n/app_de.arb
+++ b/lib/presentation/core/_l10n/app_de.arb
@@ -128,7 +128,7 @@
     "sadness_discouragement_hypersensitivity" : "Traurigkeit Entmutigung Überempfindlichkeit",
     "other" : "Andere",
     "other_mood" : "Andere Stimmung",
-    "associated_sign" : "ZUSÄTZLICHE SYMPTOME",
+    "associated_sign" : "Zusätzliche Symptome",
     "bt" : "BA ",
     "breast_tension" : "Brustanspannung ",
     "bp" : "BW",
@@ -184,7 +184,7 @@
     "mark_1" : "1 markieren",
     "mark_2" : "2 markieren",
     "mark_3" : "3 markieren",
-    "delete" : "Das ? löschen",
+    "deletePI" : "Das '?' löschen",
     "modify_daily_observation" : "Tagesbeobachtungbearbeiten",
     "cancel_peak_day" : "Höhepunkt austragen",
     "cancel_colour" : "Farbe austragen",
@@ -195,7 +195,7 @@
     "do_you_really_want_to_delete_this_observation" : "Möchten Sie diese Beobachtung wirklich löschen?",
     "cancel" : "Abbrechen",
     "observation_of_date" : "Beobachtung vom ",
-    "other_observation" : "Anderes Gefühl",
+    "other_observation" : "Andere Beobachtung",
     "other_mucus" : "Anderer Schleim",
     "other_event" : "Andere Anmerkung",
     "other_mood" : "Andere Stimmung",
@@ -207,7 +207,7 @@
     "observation" : "Beobachtungen",
     "change_colour" : "Farbe ändern",
     "mark_infertile" : "Unfruchtbar markieren",
-    "delete_point_interrogation" : "Das ? löschen",
+    "delete_point_interrogation" : "Das '?' löschen",
     "cancel_colour" : "Farbe austragen",
     "cancel_infertile" : "Unfruchtbar austragen",
     "cancel_all_analysis" : "Die gesamte Analyse löschen",
@@ -267,8 +267,8 @@
     "would_you_like_to_add_a_comment_for_the" : "Möchten Sie eine Beobachtung hinzufügen für den",
     "add" : "Hinzufügen",
     "all_your_recordings_will_be_permanently_deleted" : "Alle Ihre Angabe werden endgültig gelöscht",
-    "notification" : "Alles löschen",
-    "erase_all" : "Benachrichtigungen",
+    "notification" : "Benachrichtigungen",
+    "erase_all" : "Alles löschen",
     "activate_notifications_to_receive_alerts_and_reminders" : "Benachrichtigungen für Erinnerungen aktivieren",
     "notifications_are_scheduled" : "Die Benachrichtigungen sind geplant",
     "notification_scheduled" : " Geplant Benachrichtigungen",
@@ -300,7 +300,7 @@
     "icon_dry" : "assets/icon_observation/sensation/sensation_S.png",
     "this_date_already_exist_in_previous_cycle" : "Dieses Datum schon existiert im vorherigen Zyklus. Möchten Sie fortsetzen?",
     "d_day" : "T",
-    "premier_regle" : "DE",
+    "premier_regle" : "1.P",
     "vers" : "auf",
     "cycles" : "Zyklen",
     "@resend_cycle_3_to_2": {
