--- a/lib/presentation/core/_l10n/app_en.arb
+++ b/lib/presentation/core/_l10n/app_en.arb
@@ -55,7 +55,7 @@
     "jailulespoints":"I have read the above points and understand that this application will help me record my daily observations during my menstrual cycles, but is in no way sufficient on its own to prevent (or promote) pregnancy. I understand that if this were my goal, I would need to undergo in-depth training with an instructor specialising in natural birth control methods.",
 	"etape":"Step",
 	"principeutilisation":"Conditions of use",
-	"textinformation":"Kyklos, a cycle tracking app created in 2022 by doctors, is :<br>• usable by any woman<br>• specially adapted for pubescent or pre-pubescent girls<br>• is usable offline (data internal to the application)<br>• confidential: no link to any tracking site, server or database; does NOT disclose any data to third parties without the user's knowledge*. <br>N.B. For the greatest possible confidentiality in the digital sphere of this intimate health data, it is preferable to send PDFs of cycles via Bluetooth or encrypted messaging, and to archive them on a personal hard drive rather than in the Cloud.<br>• Free of charge<br>*with no source of revenue! Keep it on the stores with a donation, thank you!(<a href=\"https://www.teenstar.fr\">www.teenstar.fr</a> \"help us\" tab).<br><br><u>Fundamentals:</u> Drs G.D., B.deN., A.J., and other, doctors and facilitators at CEPP/TeenSTAR<br>France<br><u>Design, layout and coordination:</u> A.J.<br><u>Illustrations</u>: Inès de Chefdebien (Paris)<br><u>Contact</u>: app@teenstar.fr<br><i>All rights reserved<i>",
+	"textinformation":"<p>Information: </p><p>Kyklos, a cycle tracking app created in 2022 by doctors, is :</p><ul><li> usable by any woman </li><li> specially adapted for pubescent or pre-pubescent girls</li><li> is usable offline (data internal to the application)</li><li> confidential: no link to any tracking site, server or database; does NOT disclose any data to third parties without the user's knowledge*. N.B. For the greatest possible confidentiality in the digital sphere of this intimate health data, it is preferable to send PDFs of cycles via Bluetooth or encrypted messaging, and to archive them on a personal hard drive rather than in the Cloud.</li><li> Free of charge     *with no source of revenue! Keep it on the stores with a donation, thank you! (www.teenstar.fr, tab \"Nous aider\" (= \"To help us\" tab)).</li></ul><p>Fundamentals: Drs G.D., B.deN., A.J., and other, doctors and facilitators at CEPP/TeenSTAR France</p><p>Design, layout and coordination: A.J. </p><p>Illustrations: Inès de Chefdebien (Paris) </p><p>Contact: app@teenstar.fr</p><p>All rights reserved </p>",
     "bienvenuesurkyklos": "Welcome to Kyklos",
     "settings": "Settings",
     "account": "Account",
@@ -128,7 +128,7 @@
     "sadness_discouragement_hypersensitivity": "Sadness Discouragement Hypersensitivity",
     "other": "Other",
     "other_mood": "Other mood",
-    "associated_sign": "ASSOCIATED SIGN",
+    "associated_sign": "Associated sign",
     "bt": "BT",
     "breast_tension": "Breast tension",
     "bp": "BP",
@@ -184,7 +184,7 @@
     "mark_1": "Mark 1",
     "mark_2": "Mark 2",
     "mark_3": "Mark 3",
-    "delete": "Delete",
+    "deletePI": "Delete '?'",
     "modify_daily_observation": "Modify daily observation",
     "cancel_peak_day": "Cancel peak day",
     "cancel_colour": "Cancel colour",
@@ -204,7 +204,7 @@
     "touch_the_lines_to_be_analysed": "Touch the lines to be analysed",
     "cancel": "Cancel",
     "analyse": "Analyse",
-    "observation": "observation",
+    "observation": "observations",
     "change_colour": "Change colour",
     "mark_infertile": "Mark infertile",
     "delete_point_interrogation": "Delete '?'",
@@ -280,7 +280,7 @@
     "display_analyse":"Display analyse",
     "etes_vous_sur_de_vouloir_supprimer_toutes_les_observations":"Are you sure you want to delete all the observations from this Cycle ?",
     "nocycleforthemoment":"Aucun cycle pour le moment !",
-    "deleteallobservationsfromthecycle":"Delete all observations from the cycle",
+    "deleteallobservationsfromthecycle":"Delete all observations of cycle",
     "groupedcycleanalysis":"Grouped analysis cycle",
     "allinterpretationsofthiscyclewillbeerased":"All interpretations of this cycle will be erased",
     "cancelallanalysis":"Cancel all analysis",
@@ -298,7 +298,7 @@
     "dontallow":"Don't Allow",
     "ourappwouldliketosendnotifications":"Our app would like to send Notifications",
     "icon_dry":"assets/icon_observation/sensation/sensation_D.png",
-    "this_date_already_exist_in_previous_cycle":"This date already exists in previous cycle. Would you like to confirm ?",
+    "this_date_already_exist_in_previous_cycle":"This date already exists in the previous cycle, would you like to continue ?",
     "d_day":"D",
     "premier_regle":"FP",
     "vers": "to",
