--- a/lib/presentation/core/_l10n/app_es.arb
+++ b/lib/presentation/core/_l10n/app_es.arb
@@ -77,7 +77,7 @@
     "app_info" : "Información sobre la aplicación",
     "edit_profile" : "Modificar perfil",
     "username" : "Usuario",
-    "year_of_first_period" : "Ano del primer periodo",
+    "year_of_first_period" : "Año del primer periodo",
     "date_of_birth_dd" : "Fecha de nacimiento dd.mm.aaaa",
     "optional_fields" : "*campos opcionales",
     "edit" : "Modificar",
@@ -110,7 +110,7 @@
     "flow_p" : "Flujo +",
     "traces" : "Rastros",
     "nothing" : "Nada",
-    "mucus" : "MOCO",
+    "mucus" : "Moco",
     "white_or_yellow_opaque" : "Opaco blanco o amarillo; espeso, pastoso o grumoso; pegajoso (no estirable)",
     "opaque_with_transparency" : "Opaco con transparente; un poco estirable",
     "cloudy_to_transparent" : "De nublado (blanco) a transparente; elástico",
@@ -128,7 +128,7 @@
     "sadness_discouragement_hypersensitivity" : "Tristeza, desánimo, hipersensibilidad",
     "other" : "Otro",
     "other_mood" : "Otro humor",
-    "associated_sign" : "SIGNO ASOCIADO",
+    "associated_sign" : "Signo asociado",
     "bt" : "TS ",
     "breast_tension" : "Tensión senos ",
     "bp" : "DV",
@@ -184,7 +184,7 @@
     "mark_1" : "Marcar 1",
     "mark_2" : "Marcar 2",
     "mark_3" : "Marcar 3",
-    "delete" : "Borrar el ?",
+    "deletePI" : "Borrar el '?'",
     "modify_daily_observation" : "Modificar observación del día",
     "cancel_peak_day" : "Cancelar pico",
     "cancel_colour" : "Cancelar color",
@@ -195,7 +195,7 @@
     "do_you_really_want_to_delete_this_observation" : "¿De verdad desea borrar esta observación?",
     "cancel" : "Cancelar",
     "observation_of_date" : "Observación del ",
-    "other_observation" : "Otra sensación",
+    "other_observation" : "Otra observación",
     "other_mucus" : "Otro mucus",
     "other_event" : "Otra nota",
     "other_mood" : "Otro humor",
@@ -207,7 +207,7 @@
     "observation" : "observaciones",
     "change_colour" : "Modificar color",
     "mark_infertile" : "Marcar infértil",
-    "delete_point_interrogation" : "Borrar el ?",
+    "delete_point_interrogation" : "Borrar el '?'",
     "cancel_colour" : "Cancelar el color",
     "cancel_infertile" : "Cancelar infértil",
     "cancel_all_analysis" : "Cancelar todo el análisis",
@@ -267,8 +267,8 @@
     "would_you_like_to_add_a_comment_for_the" : "¿Desea añadir una observación para el",
     "add" : "Añadir",
     "all_your_recordings_will_be_permanently_deleted" : "Todas tus grabaciones se borrarán definitivamente",
-    "notification" : "Borrar todo",
-    "erase_all" : "Notificaciones",
+    "notification" : "Notificaciones",
+    "erase_all" : "Borrar todo",
     "activate_notifications_to_receive_alerts_and_reminders" : "Activar notificaciones para recibir alertas y recordatorios",
     "notifications_are_scheduled" : "Las notificaciones están programadas",
     "notification_scheduled" : "Notificaciones programadas",
