--- a/lib/presentation/core/_l10n/app_hr.arb
+++ b/lib/presentation/core/_l10n/app_hr.arb
@@ -128,7 +128,7 @@
     "sadness_discouragement_hypersensitivity" : "Tuga Obeshrabrenost Preosjetljivost",
     "other" : "Ostalo",
     "other_mood" : "Ostala raspoloženja",
-    "associated_sign" : "DODATNI ZNAK",
+    "associated_sign" : "Dodatni znak",
     "bt" : "NG",
     "breast_tension" : "Napetost grudi",
     "bp" : "BT",
@@ -184,7 +184,7 @@
     "mark_1" : "Oznaka 1",
     "mark_2" : "Oznaka 2",
     "mark_3" : "Oznaka 3",
-    "delete" : "Izbriši ?",
+    "deletePI" : "Izbriši '?'",
     "modify_daily_observation" : "Promijeni dnevno opažanje",
     "cancel_peak_day" : "Ukloni oznaku za vrhunac",
     "cancel_colour" : "Otkaži boju",
@@ -195,7 +195,7 @@
     "do_you_really_want_to_delete_this_observation" : "Zaista želite izbrisati ovo opažanje?",
     "cancel" : "Otkaži",
     "observation_of_date" : "Opažanje za",
-    "other_observation" : "Ostali osjeti",
+    "other_observation" : "Ostali opisi",
     "other_mucus" : "Dodatno o sluzi",
     "other_event" : "Ostale napomene",
     "other_mood" : "Ostala raspoloženja",
@@ -207,7 +207,7 @@
     "observation" : "opisa",
     "change_colour" : "Promijeni boju",
     "mark_infertile" : "Označi neplodno",
-    "delete_point_interrogation" : "Izbriši ?",
+    "delete_point_interrogation" : "Izbriši '?'",
     "cancel_colour" : "Otkaži boju",
     "cancel_infertile" : "Poništi neplodno",
     "cancel_all_analysis" : "Poništi cijelu analizu",
@@ -267,8 +267,8 @@
     "would_you_like_to_add_a_comment_for_the" : "Želite li dodati opažanje za",
     "add" : "Dodaj",
     "all_your_recordings_will_be_permanently_deleted" : "Svi Vaši zapisi bit će trajno izbrisani!",
-    "notification" : "Izbriši sve ",
-    "erase_all" : "Obavijesti",
+    "notification" : "Obavijesti",
+    "erase_all" : "Izbriši sve",
     "activate_notifications_to_receive_alerts_and_reminders" : "Omogućite obavijesti za primanje upozorenja i podsjetnika",
     "notifications_are_scheduled" : "Obavijesti su zakazane",
     "notification_scheduled" : "Obavijesti zakazane",
