--- a/lib/presentation/core/_l10n/app_it.arb
+++ b/lib/presentation/core/_l10n/app_it.arb
@@ -128,7 +128,7 @@
     "sadness_discouragement_hypersensitivity" : "Tristezza, scoraggiamento, ipersensibilità",
     "other" : "Altro",
     "other_mood" : "Altro umore",
-    "associated_sign" : "SEGNO ASSOCIATO",
+    "associated_sign" : "Segno associato",
     "bt" : "TS",
     "breast_tension" : "Tensione al seno",
     "bp" : "DA",
@@ -184,7 +184,7 @@
     "mark_1" : "Segna 1",
     "mark_2" : "Segna 2",
     "mark_3" : "Segna 3",
-    "delete" : "Cancella il ?",
+    "deletePI" : "Cancella il '?'",
     "modify_daily_observation" : "Modifica l'osservazione del giorno",
     "cancel_peak_day" : "Annulla il picco",
     "cancel_colour" : "Annulla il colore",
@@ -195,7 +195,7 @@
     "do_you_really_want_to_delete_this_observation" : "Vuoi davvero eliminare questa osservazione?",
     "cancel" : "Annulla",
     "observation_of_date" : "Osservazione del ",
-    "other_observation" : "Altra sensazione",
+    "other_observation" : "Altra osservazione",
     "other_mucus" : "Altro muco",
     "other_event" : "Altra nota",
     "other_mood" : "Altro umore",
@@ -207,7 +207,7 @@
     "observation" : "osservazioni",
     "change_colour" : "Modifica il colore",
     "mark_infertile" : "Segna infertile",
-    "delete_point_interrogation" : "Cancella il ?",
+    "delete_point_interrogation" : "Cancella il '?'",
     "cancel_colour" : "Annulla il colore",
     "cancel_infertile" : "Annulla infertile",
     "cancel_all_analysis" : "Annulla tutta l'analisi",
