--- a/lib/presentation/core/_l10n/app_fr.arb
+++ b/lib/presentation/core/_l10n/app_fr.arb
@@ -128,7 +128,7 @@
     "sadness_discouragement_hypersensitivity":"Tristesse Découragement Hypersensibilité",
     "other":"Autre",
     "other_mood":"Autre humeur",
-    "associated_sign":"SIGNE ASSOCIE",
+    "associated_sign":"Signe associé",
     "bt":"DS",
     "breast_tension":"Tension seins",
     "bp":"DV",
@@ -184,7 +184,7 @@
     "mark_1":"Marquer 1",
     "mark_2":"Marquer 2",
     "mark_3":"Marquer 3",
-    "delete":"Effacer",
+    "deletePI":"Effacer le '?'",
     "modify_daily_observation":"Modifier l'observation du jour",
     "cancel_peak_day":"Annuler sommet",
     "cancel_colour":"Annuler couleur",
@@ -204,7 +204,7 @@
     "touch_the_lines_to_be_analysed":"Toucher les lignes à analyser",
     "cancel":"Annuler",
     "analyse":"Analyse",
-    "observation": "observation",
+    "observation": "observations",
     "change_colour":"Modifier couleur",
     "mark_infertile":"Marquer infertile",
     "delete_point_interrogation":"Effacer le '?'",
