--- a/lib/presentation/core/_l10n/app_en.arb
+++ b/lib/presentation/core/_l10n/app_en.arb
@@ -121,10 +121,10 @@
     "mood": "MOOD",
     "very_good": "Very good",
     "good": "Good",
-    "no_particular_emotion_balanced": "No particular emotion balanced",
+    "no_particular_emotion_balanced": "No particular emotion, balanced",
     "desire_to_be_undisturbed": "Desire to be undisturbed",
     "mood_swings": "Mood swings",
-    "nervous_irritable": "Nervous irritable",
+    "nervous_irritable": "Nervous, irritable",
     "sadness_discouragement_hypersensitivity": "Sadness Discouragement Hypersensitivity",
     "other": "Other",
     "other_mood": "Other mood",
@@ -252,7 +252,7 @@
     "please_note_that_a_comment_already_exists_for_this_date_would_you_like_to_replace_it":"Please note that an observation already exists for this date. Would you like to replace it ?",
     "replace":"Replace",
     "please_note_that_the_days_of_the_previous_cycle_after_the_date_of_this_observation_will_be_carried_over_to_this_new_cycle_would_you_like_to_confirm":"Please note that the days of the previous cycle after the date of this observation will be carried over to this new cycle. Would you like to confirm ?",
-    "reporting_observations":"Reporting observations",
+    "reporting_observations":"Carry observations over",
     "notes_confidential":"Notes Confidential",
     "summary_analysis_of_cycle_":"Summary / Analysis of cycle ",
     "to_cycle":"to cycle",
