--- a/lib/presentation/core/_l10n/app_hr.arb
+++ b/lib/presentation/core/_l10n/app_hr.arb
@@ -137,7 +137,7 @@
     "headache" : "Glavobolja",
     "ac" : "Ak",
     "acne" : "Akne",
-    "event" : "DOGAĐAJ",
+    "event" : "Dogadaj",
     "fatigue" : "Umor",
     "stress" : "Stres",
     "personal_1" : "Osobno 1",
@@ -168,7 +168,7 @@
     "blood" : "Krvarenje",
     "mucus" : "Sluz",
     "mood" : "Raspoloženje",
-    "event" : "Događaj",
+    "event" : "Dogadaj",
     "observation_of_the_day" : "Opažanje dana",
     "observation_of_d" : "Opažanje za D",
     "monday" : "Ponedjeljak",
@@ -232,7 +232,7 @@
     "mucus" : "Sluz",
     "mood" : "Raspoloženje ",
     "temperature" : "Temperatura",
-    "event" : "Događaj ",
+    "event" : "Dogadaj ",
     "cycle_comments" : "Komentar ciklusa",
     "day" : "Dan",
     "date" : "Datum",
