--- a/lib/presentation/core/_l10n/app_pt.arb
+++ b/lib/presentation/core/_l10n/app_pt.arb
@@ -223,7 +223,7 @@
     "export_as_pdf" : "Exportar como PDF",
     "from_cycle" : "Do ciclo ",
     "to_cycle" : "para o ciclo ",
-    "fp_abbreviation_for_1st_period" : "PR ",
+    "fp_abbreviation_for_1st_period" : "PM",
     "date" : "Data ",
     "colour" : "Cor ",
     "analysis" : "Análise ",
@@ -300,7 +300,7 @@
     "icon_dry" : "assets/icon_observation/sensation/sensation_S.png",
     "this_date_already_exist_in_previous_cycle" : "Esta data já existe no ciclo anterior. Deseja continuar ?",
     "d_day" : "D",
-    "premier_regle" : "PR",
+    "premier_regle" : "PM",
     "vers" : "para",
     "@resend_cycle_3_to_2": {
         "type": "text",
