--- a/lib/presentation/core/_l10n/app_hr.arb
+++ b/lib/presentation/core/_l10n/app_hr.arb
@@ -254,7 +254,7 @@
     "please_note_that_the_days_of_the_previous_cycle_after_the_date_of_this_observation_will_be_carried_over_to_this_new_cycle_would_you_like_to_confirm" : "Imajte na umu da će se dani prethodnog ciklusa, koji se nalaze nakon datuma ovog promatranja, prenijeti u ovaj novi ciklus. Želite li potvrditi?",
     "reporting_observations" : "Prenesi opažanje",
     "notes_confidential" : "Povjerljive bilješke",
-    "summary_analysis_of_cycle_" : "Sažetak / Analiza ciklusa",
+    "summary_analysis_of_cycle_" : "Sazetak / Analiza ciklusa",
     "to_cycle" : "do ciklusa",
     "choose_a_cycle" : "Odaberi ciklus",
     "no_cycle_to_be_exported_in_these_terminals" : "Nema ciklusa za izvoz u ovim terminima",
